syntax = "proto3";
package pb;
option go_package = "/pb";

message CreateOrderRequest {
  string id = 1;
  float price = 2;
  float tax = 3;
}

message CreateOrderResponse {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message GetListOrderRequest{
  
}

message ListOrderResponse {
  repeated CreateOrderResponse Orders = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse){};
  rpc GetListOrder(GetListOrderRequest) returns (ListOrderResponse);
}